[package]
name = "freemkv-unlock-css"
version = "1.2.0"
edition = "2024"
rust-version = "1.86"
license = "AGPL-3.0-only"
description = "CSS (DVD-Video) bus-auth unlocker plugin for libfreemkv"
repository = "https://github.com/freemkv/freemkv-unlock"

[dependencies]
libfreemkv = "1.2.0"
tracing = "0.1"
